<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblTv01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/et01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTv01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10" 
        android:inputType="text">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et01"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn01" />

    <Button
        android:id="@+id/btn02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn01"
        android:layout_below="@+id/btn01"
        android:layout_marginTop="16dp"
        android:text="@string/btn02" />

    <Button
        android:id="@+id/btn03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn02"
        android:layout_below="@+id/btn02"
        android:layout_marginTop="13dp"
        android:text="@string/btn02" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn02"
        android:layout_alignBottom="@+id/btn02"
        android:layout_alignLeft="@+id/lblTv01"
        android:layout_marginLeft="13dp"
        android:text="@string/btn2_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn03"
        android:layout_alignBottom="@+id/btn03"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/btn2_2" />

</RelativeLayout>